Bug 1966466 - Fix the strict weak order crash introduced by flattened tree selection r=jjaschke,dom-core

Differential Revision: https://phabricator.services.mozilla.com/D249653